--- a/src/components/main-card/main-card.scss
+++ b/src/components/main-card/main-card.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixin.scss';
 
 .main-card {
     // dimensions
@@ -7,6 +8,10 @@
     margin-top: 24px;
     border-radius: 20px;
     padding: 35px 20px;
+
+    @include mobile {
+        width: 345px;
+    }
 
     background-color: $top-card-text-color;
 
