--- a/src/components/bar-chart/bar-chart.scss
+++ b/src/components/bar-chart/bar-chart.scss
@@ -1,4 +1,11 @@
+@import '../../styles/mixin.scss';
+
 canvas {
     margin-top: 10px;
     padding: 20px 0;
+
+    @include mobile {
+        margin-top: 35px;
+        padding: 0;
+    }
 }
